--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,28 +1,26 @@
-filters {
-  background-color: white;
+.filters {
+  background-color: #fff;
   height: 70px;
   width: 100%;
-  border: 1px solid #DDDDDD;
+  border: 1px solid #dddddd;
   border-radius: 4px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
 }
 
 .filters button {
   font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFFFFF;
+  background-color: #ff5a5f;
+  color: #ffffff;
   height: 48px;
   width: 20%;
-  border: none;
+  border: 0;
   border-radius: 4px;
-  padding: 0 20px;
-  cursor: pointer;
-  opacity: 0.9;
-  transition: opacity 0.2s ease-in-out;
+  position: absolute;
+  top: 50%;
+  right: 30px;
+  transform: translateY(-50%);
 }
 
 .filters button:hover {
-  opacity: 1;
+  opacity: 0.9;
 }
