--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,6 +1,33 @@
 .places {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.places h1 {
+  font-size: 30px;
+  width: 100%;
+  margin-left: 15px;
+}
+
+.places article {
+  width: 390px;
+  padding: 20px;
+  margin: 20px;
+  border: 1px solid #ff5a5f;
+  border-radius: 4px;
+}
+
+.places article h2 {
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+/*.places {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 800px;
   margin: 0 auto;
@@ -23,4 +50,4 @@
   font-size: 24px;
   text-align: center;
   margin-bottom: 10px;
-}
+}*/
